Fixed issue with class='hero' overlapping class='logo'

--- a/styles/style.css
+++ b/styles/style.css
@@ -264,7 +264,7 @@ html {
   border-radius: 50px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 821px) {
   .fetiino .navbar {
     height: 50px;
   }
